--- a/src/components/LayoutContent/index.css
+++ b/src/components/LayoutContent/index.css
@@ -2,13 +2,32 @@
     text-align: center;
 }
 .right-container {
-    overflow-x: auto;
+    overflow-x: auto !important;
 }
-.content-container {
+.right-container .header{
+    min-width: 1000px;
+    background: #fff;
+    padding: 0;
+}
+.right-container .content-container {
     margin: 24px 16px; 
     padding: 24px;
     background: #fff;
     min-height: 280px;
     min-width: 1000px;
     overflow-y: auto;
+}
+.right-container .footer {
+    text-align: center;
+    min-width: 1000px;
+}
+.right-container .menu-trigger {
+    font-size: 18px;
+    line-height: 64px;
+    padding: 0 24px;
+    cursor: pointer;
+    transition: color .3s;
+}
+.right-container .menu-trigger:hover {
+    color: #1890ff;
 }
