update readme 一周过的真快

--- a/client/src/components/Timer/TwoTimers/index.less
+++ b/client/src/components/Timer/TwoTimers/index.less
@@ -1,16 +1,25 @@
-.timers-container{
+.timers-container {
     max-width: 280px;
     border: 7px solid #5D6D7E;
     padding: 10px;
     border-radius: 5px;
+    .timer-container {
+        display: flex;
+        justify-content: space-around;
+    }
+    .button-group {
+        margin-top: 20px;
+        display: flex;
+        justify-content: space-around;
+    }
 }
-.timers-container .timer-container{
-    display: flex;
-    justify-content: space-around;
-}
+// .timers-container .timer-container{
+//     display: flex;
+//     justify-content: space-around;
+// }
 
-.timers-container .button-group{
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-around;
-}
+// .timers-container .button-group{
+//     margin-top: 20px;
+//     display: flex;
+//     justify-content: space-around;
+// }
