--- a/client/src/components/Timer/index.less
+++ b/client/src/components/Timer/index.less
@@ -1,24 +1,29 @@
+@borderColor: #D5DBDB;
+
 .timer{
     text-align: center;
-}
-.timer-second-container{
-    display: inline-block;
-}
-.timer-second{
-    border-radius: 5px;
-    color: white;
-    padding: 10px;
-    background: black;
-    border: 7px #D5DBDB solid;
-}
-.timer-title-container{
-    padding: 3px;
-    color: white;
-    background: #34495E;
-    display: inline-block;
-    font-size: 18px;
-    border-top: 4px solid #D5DBDB;
-    border-left: 4px solid #D5DBDB;
-    border-right: 4px solid #D5DBDB;
-    border-radius: 2px;
+
+    .timer-second-container {
+        display: inline-block;
+
+        .timer-second {
+            border-radius: 5px;
+            color: white;
+            padding: 10px;
+            background: black;
+            border: 7px @borderColor solid;
+        }
+    }
+    
+    .timer-title-container {
+        padding: 3px;
+        color: white;
+        background: #34495E;
+        display: inline-block;
+        font-size: 18px;
+        border-top: 4px solid @borderColor;
+        border-left: 4px solid @borderColor;
+        border-right: 4px solid @borderColor;
+        border-radius: 2px;
+    }
 }
